Add times in table Board and fix the bug: times not work
