# server/api/openapi-with-docs.json
@@ -85,7 +85,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/Board"
+                    "$ref": "#/components/schemas/BoardDto"
                   }
                 }
               }
@@ -123,7 +123,30 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/Board"
+                    "$ref": "#/components/schemas/BoardDto"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/BoardPrice": {
+      "get": {
+        "tags": [
+          "BoardPrice"
+        ],
+        "operationId": "BoardPrice_GetAll",
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/BoardPriceDto"
                   }
                 }
               }
@@ -306,18 +329,18 @@
           }
         }
       },
-      "Board": {
+      "BoardDto": {
         "type": "object",
         "additionalProperties": false,
         "properties": {
           "id": {
             "type": "string"
           },
-          "playerid": {
+          "playerId": {
             "type": "string",
             "nullable": true
           },
-          "gameid": {
+          "gameId": {
             "type": "string",
             "nullable": true
           },
@@ -332,200 +355,29 @@
             "type": "integer",
             "format": "int32"
           },
-          "repeatid": {
-            "type": "string",
-            "nullable": true
+          "times": {
+            "type": "integer",
+            "format": "int32"
           },
-          "createdat": {
+          "createdAt": {
             "type": "string",
             "format": "date-time",
             "nullable": true
-          },
-          "game": {
-            "nullable": true,
-            "oneOf": [
-              {
-                "$ref": "#/components/schemas/Game"
-              }
-            ]
-          },
-          "player": {
-            "nullable": true,
-            "oneOf": [
-              {
-                "$ref": "#/components/schemas/User"
-              }
-            ]
           },
           "transactions": {
             "type": "array",
             "items": {
-              "$ref": "#/components/schemas/Transaction"
+              "$ref": "#/components/schemas/BoardTransactionDto"
             }
           }
         }
       },
-      "Game": {
+      "BoardTransactionDto": {
         "type": "object",
         "additionalProperties": false,
         "properties": {
           "id": {
             "type": "string"
-          },
-          "year": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "weeknumber": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "startat": {
-            "type": "string",
-            "format": "date-time",
-            "nullable": true
-          },
-          "joindeadline": {
-            "type": "string",
-            "format": "date-time",
-            "nullable": true
-          },
-          "winningnumbers": {
-            "type": "array",
-            "nullable": true,
-            "items": {
-              "type": "integer",
-              "format": "int32"
-            }
-          },
-          "createdat": {
-            "type": "string",
-            "format": "date-time",
-            "nullable": true
-          },
-          "boards": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Board"
-            }
-          }
-        }
-      },
-      "User": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "id": {
-            "type": "string"
-          },
-          "email": {
-            "type": "string"
-          },
-          "password": {
-            "type": "string"
-          },
-          "fullname": {
-            "type": "string"
-          },
-          "phone": {
-            "type": "string",
-            "nullable": true
-          },
-          "role": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "active": {
-            "type": "boolean"
-          },
-          "balance": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "createdat": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "boards": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Board"
-            }
-          },
-          "repeats": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Repeat"
-            }
-          },
-          "transactionPlayers": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Transaction"
-            }
-          },
-          "transactionProcessedbyNavigations": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Transaction"
-            }
-          }
-        }
-      },
-      "Repeat": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "id": {
-            "type": "string"
-          },
-          "playerid": {
-            "type": "string",
-            "nullable": true
-          },
-          "numbers": {
-            "type": "array",
-            "items": {
-              "type": "integer",
-              "format": "int32"
-            }
-          },
-          "price": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "remainingweeks": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "optout": {
-            "type": "boolean"
-          },
-          "createdat": {
-            "type": "string",
-            "format": "date-time",
-            "nullable": true
-          },
-          "player": {
-            "nullable": true,
-            "oneOf": [
-              {
-                "$ref": "#/components/schemas/User"
-              }
-            ]
-          }
-        }
-      },
-      "Transaction": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "id": {
-            "type": "string"
-          },
-          "playerid": {
-            "type": "string",
-            "nullable": true
           },
           "type": {
             "type": "string"
@@ -534,72 +386,54 @@
             "type": "integer",
             "format": "int32"
           },
-          "mobilepayref": {
-            "type": "string",
-            "nullable": true
-          },
           "status": {
             "type": "string"
           },
-          "boardid": {
-            "type": "string",
-            "nullable": true
-          },
-          "createdat": {
+          "createdAt": {
             "type": "string",
             "format": "date-time",
             "nullable": true
-          },
-          "processedby": {
-            "type": "string",
-            "nullable": true
-          },
-          "processedat": {
-            "type": "string",
-            "format": "date-time",
-            "nullable": true
-          },
-          "board": {
-            "nullable": true,
-            "oneOf": [
-              {
-                "$ref": "#/components/schemas/Board"
-              }
-            ]
-          },
-          "player": {
-            "nullable": true,
-            "oneOf": [
-              {
-                "$ref": "#/components/schemas/User"
-              }
-            ]
-          },
-          "processedbyNavigation": {
-            "nullable": true,
-            "oneOf": [
-              {
-                "$ref": "#/components/schemas/User"
-              }
-            ]
           }
         }
       },
       "CreateBoardRequest": {
         "type": "object",
         "additionalProperties": false,
+        "required": [
+          "playerId",
+          "numbers"
+        ],
         "properties": {
           "playerId": {
-            "type": "string"
+            "type": "string",
+            "minLength": 1
           },
           "numbers": {
             "type": "array",
+            "maxItems": 8,
+            "minItems": 5,
             "items": {
               "type": "integer",
               "format": "int32"
             }
           },
           "times": {
+            "type": "integer",
+            "format": "int32",
+            "maximum": 2147483647.0,
+            "minimum": 1.0
+          }
+        }
+      },
+      "BoardPriceDto": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "fieldsCount": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "price": {
             "type": "integer",
             "format": "int32"
           }
